--- a/_posts/0000-01-02-flooijdt.md
+++ b/_posts/0000-01-02-flooijdt.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+I am adding this line in what i think is rhe fifth line!
 Use the left arrow to go back!
